# roger-agent

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
config/: backends.example.toml  operating.md  profiles.toml  system_prompt.txt
config/skills/: deploy-roger.md
deploy/: README.md  lmstudio-server.service  roger.service
docs/: architecture.md  design-context-and-compaction.md  design-subprocess-dispatch.md  phase1.md  todo.md
docs/element-x-pr/: BotCommandDataSource.kt  BotCommandSuggestion.kt  DefaultSlashCommandServiceTest_additions.kt  DefaultSlashCommandService_diff.kt  PR_DESCRIPTION.md
src/: audio.rs  compaction.rs  config.rs  error.rs  history.rs  llm.rs  main.rs  markdown.rs  mcp.rs  memory.rs  room_profiles.rs  scheduler.rs  skills.rs  subprocess.rs  tools.rs  web.rs  workers.rs
src/matrix/: attachment.rs  client.rs  handler.rs  mod.rs
