[package]
name = "roger"
version = "0.1.0"
edition = "2021"
description = "Matrix-native AI orchestrator agent"

[dependencies]
matrix-sdk = { version = "0.8", features = ["e2e-encryption", "sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart"] }

[dev-dependencies]
tempfile = "3"
