[package]
name = "roger"
version = "0.1.0"
edition = "2021"
description = "Matrix-native AI orchestrator agent"

[dependencies]
matrix-sdk = { version = "0.8", features = ["e2e-encryption", "sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3"
chrono = "0.4"
libc = "0.2"
rmcp = { version = "2", features = ["client", "transport-child-process"] }
axum = "0.7"
tower = "0.4"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[dev-dependencies]
tempfile = "3"
