[package]
name = "roger"
version = "0.1.0"
edition = "2021"
description = "Matrix-native AI orchestrator agent"

[dependencies]
matrix-sdk = { version = "0.8", default-features = false, features = ["e2e-encryption", "automatic-room-key-forwarding", "sqlite", "rustls-tls"] }
# Force SQLite to be compiled from source so cross-compiling (aarch64) doesn't
# need a target libsqlite3 to link against.
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
futures-util = "0.3"
chrono = "0.4"
libc = "0.2"
rmcp = { version = "2", features = ["client", "transport-child-process"] }
axum = "0.7"
tower = "0.4"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[dev-dependencies]
tempfile = "3"
